--- a/style.css
+++ b/style.css
@@ -1,101 +1,62 @@
+*{margin: 0;}
+
 .main__container{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.reset{
-    width: 70px;
-    height: 40px;
-    margin-left: 700px;
-    margin-top: 30px;
-    background-color: crimson;
-    border: none;
-}
-.resetPlayer{
-    width: 100px;
-    height: 50px;
-    margin-left: 700px;
-    margin-top: 30px;
-    background-color: coral;
-    border: none;
-}
-.player-1{
-    height: 40px;
-    width: 250px;
+    height: 100vh;
     display: flex;
-    font-size: 20px;
-    align-items: center;
     justify-content: center;
-    border: 1px solid #BFBFBF;
-    background-color: white;
-    box-shadow: 10px 10px 5px #aaaaaa;
+    align-items: center;
 }
 
-.player-2{
-    height: 40px;
-    width: 250px;
+.sub__container{
+    height: 260px;
+    width: 300px;
     display: flex;
-    font-size: 20px;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
-    border: 1px solid #BFBFBF;
-    background-color: white;
-    box-shadow: 10px 10px 5px #aaaaaa;
+    box-shadow: 5px 10px 10px 5px #aaaaaa;     
+    background-color: #fff;
 }
 
-.game__title{
-   font-size: 40px;
-   display: flex;
-   margin-top: 30px;
-   justify-content: center;
-   color: lawngreen;
-   animation: TicTacToe 2s ease-in 0s infinite alternate;
-   animation-fill-mode: both;
-}
-
-.container{
-    height: 200px;
-    margin-top: 50px;
-   /* margin: 0 auto;
-    margin-top: 50px;
-    */
-    width: 284px;
+.row{
+    display: flex;
+    padding: 10px 10px 10px 10px;
     
-    padding: 10px 10px 20px 10px;
-    border: 1px solid #BFBFBF;
-    background-color: white;
-    box-shadow: 10px 10px 5px #aaaaaa;
-
 }
 
-.col > div{
+.row div{
+    height: 50px;
     width: 50px;
-    height: 50px;
-    background-color: grey;
-    border: 2px solid black;
-    object-fit: contain;
-    
-
-}
-
-.col{
     display: flex;
-    justify-content: space-around;
-    margin-top: 10px;
-}
-
-.container >div >div {
-    display: flex;
-    object-fit: contain;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    background-color: gray;
+    object-fit: contain;
     font-size: 30px;
 }
 
-@keyframes TicTacToe {
+.row div:nth-child(2){
+   margin-left: 25px;
+   margin-right: 25px;
+}
 
-    50% {transform: translateX(-30px);}
-    100% {transform: translateX(30px);}
+@media (max-width:250px){
+   
     
-    
+    .sub__container{
+        height: 200px;
+        width: 200px;
+        box-shadow: none;
+        justify-content: space-evenly;
+    }
+
+    .row div{
+        height: 40px;
+        width: 40px;
+    }
+
+    .row div:nth-child(2){
+        margin-left: 5px;
+        margin-right: 5px;
+    }
 }
