--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
     justify-content: center;
     align-items: center;
     background-color: gray;
+    border: 2px solid black;
     object-fit: contain;
     font-size: 30px;
 }
