--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@
 .main__container{
     height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .sub__container{
@@ -14,7 +16,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    box-shadow: 5px 10px 10px 5px #aaaaaa;     
+    box-shadow: 5px 5px 5px 5px #aaaaaa;     
     background-color: #fff;
 }
 
@@ -41,6 +43,53 @@
    margin-right: 25px;
 }
 
+.Resetgrid{
+    width: 300px;
+    height: 50px;
+    font-size: 30px;
+    text-align: center;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+}
+.ResetWin{
+    width: 300px;
+    height: 50px;
+    font-size: 30px;
+    text-align: center;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+}
+.player1{
+    width: 300px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: skyblue;
+    padding: 6px 4px 4px 4px;
+    font-size: 20px;
+    border-radius: 4px;
+}
+.player2{
+    width: 300px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    background-color: black;
+    padding: 6px 4px 4px 4px;
+    font-size: 20px;
+    border-radius: 4px;
+}
 @media (max-width:250px){
    
     
